# UnrealDmsMCP

./: .gitignore  .mcp.json.example
.claude/commands/: install-unreal-dms.md
Python/: bridge.py  pyproject.toml  unreal_dms_mcp_server.py
Python/helpers/blueprint_graph/: __init__.py  connector_manager.py  event_manager.py  function_io.py  function_manager.py  graph_inspector.py  node_deleter.py  node_manager.py  node_properties.py  variable_manager.py
Python/tools/: animation_tools.py  blueprint_tools.py  capture_tools.py  core_tools.py  mesh_material_tools.py  metahuman_tools.py  spline_vehicle_tools.py
UnrealMCP/: UnrealMCP.uplugin
UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
UnrealMCP/Source/UnrealMCP/Private/: EpicUnrealMCPBridge.cpp
UnrealMCP/Source/UnrealMCP/Private/Commands/: EpicUnrealMCPEditorCommands.cpp
UnrealMCP/Source/UnrealMCP/Private/Commands/Python/: EpicUnrealMCPPythonCommands.cpp
UnrealMCP/Source/UnrealMCP/Public/: EpicUnrealMCPBridge.h
UnrealMCP/Source/UnrealMCP/Public/Commands/: EpicUnrealMCPEditorCommands.h
UnrealMCP/Source/UnrealMCP/Public/Commands/Python/: EpicUnrealMCPPythonCommands.h
docs/: install-skill-guide.md  setup.md  smoke.md
tests/: conftest.py  test_bridge.py  test_server_schema.py
